--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -6,3 +6,10 @@ jobs:
     steps:
      - name: Printing Hello_world
        run: echo "Hello world"
+       
+     - name: Multi line strings
+       run: |
+         echo "first Line"
+         echo "second Line"
+         echo "third Line"
+       
