--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,15 +1,24 @@
 name: Continues Integration
 on: workflow_dispatch
 jobs: 
-  hello:
-    runs-on: ubuntu-latest
-    steps:
-     - name: Printing Hello_world
-       run: echo "Hello world"
+  build:
+   runs-on: ubuntu-latest
+   steps:
+     - name: Build stage
+       run: echo " App is building"
        
-     - name: Multi line strings
+  test:
+   runs-on: ubuntu-latest
+   steps:
+     - name: Test stage
        run: |
-         echo "first Line"
-         echo "second Line"
-         echo "third Line"
+         echo "Testing started"
+         echo "Testing completed"
+         
+  deploy:
+   runs-on: ubuntu-latest
+   steps:
+     - name: Deploy stage
+       run: echo " App is deployed"
+       
        
