--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -8,6 +8,7 @@ jobs:
        run: echo " App is building"
        
   test:
+   needs: build
    runs-on: ubuntu-latest
    steps:
      - name: Test stage
@@ -16,6 +17,7 @@ jobs:
          echo "Testing completed"
          
   deploy:
+   needs: test
    runs-on: ubuntu-latest
    steps:
      - name: Deploy stage
