--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -1,5 +1,11 @@
 name: Continues Integration
-on: push
+on:
+  push:
+    branches:
+      - main
+  pull:
+    branches:
+      - main
 jobs: 
   build:
    runs-on: ubuntu-latest
